--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^1.3.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/pickers": "^3.3.10",
+    "bootstrap": "^4.6.0",
     "firebase": "^8.2.9",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^16.8.6",
     "react-hook-form": "^6.15.4",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-scripts": "3.0.1",
     "save": "^2.4.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
